# sniproxy

./: .gitignore  .travis.yml  ARCHITECTURE.md  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  SANITIZER-IMPLEMENTATION-SUMMARY.md  SANITIZERS.md  configure.ac  setver.sh  sniproxy.conf  test-sanitizer-build.sh
.github/workflows/: TESTING-CHECKLIST.md  autorelease.yml  build-and-fuzz.yml  build.yml  continuous-fuzzing.yml  freebsd.yml  release-packages.yml  sanitizers.yml  tests.yml  valgrind.yml
alpine/: APKBUILD  sniproxy.confd  sniproxy.initd
debian/: changelog  control  copyright  rules  sniproxy.service
freebsd/: pkg-descr
freebsd/files/: sniproxy.in
man/: Makefile.am  sniproxy-cfg.8  sniproxy.8  sniproxy.conf.5
netbsd/: DESCR  PLIST
netbsd/files/: sniproxy.sh
redhat/: sniproxy.spec
scripts/: .gitignore  Makefile.am  sniproxy.in  sniproxy.rc  sniproxy.service
selinux/: sniproxy.fc  sniproxy.if  sniproxy.te
src/: Makefile.am  address.c  address.h  backend.c  backend.h  binder.c  binder.h  buffer.c  buffer.h  capsicum.c  capsicum.h  cfg_parser.c  cfg_parser.h  cfg_tokenizer.c  cfg_tokenizer.h  config.c  config.h  config_validator.c  connection.c  connection.h  dtls.c  dtls.h  fd_util.h  health.c  health.h  hostname_sanitize.h  http.c  http.h  http2.c  http2.h  http2_huffman.c  http2_huffman.h  http2_huffman_table.inc  ipc_crypto.c  ipc_crypto.h  listener.c  listener.h  logger.c  logger.h  loop_time.h  (+22 more)
tests/: .gitignore  Makefile.am  README.md  TestUtils.pm  address_test.c  bad_dns_request_test  bad_request_test  bind_source_test  binder_test.c  buffer_test.c  cfg_tokenizer_test.c  config_test.c  connection_reset_test  dtls_test.c  fallback_test  fd_limit_test  functional_test  hostname_test  http_test.c  ipc_crypto_debug_test  ipc_crypto_debug_test.c  ipc_crypto_rekey_test  ipc_crypto_rekey_test.c  ipc_crypto_time_rekey_test  ipc_crypto_time_rekey_test.c  ipv6_v6only_test  listener_lookup_test.c  minecraft_test.c  proxy_header_test  quic_listener_test.c  reload_test  resolv_test.c  reuseport_test  seccomp_test  seccomp_test.c  secure_temp_dir_test.c  slow_client_test  table_test.c  tls_test.c  transparent_proxy_test  (+3 more)
tests/fuzz/: README.md  address_fuzz.c  cfg_tokenizer_fuzz.c  config_fuzz.c  dtls_fuzz.c  hostname_fuzz.c  http2_fuzz.c  http_fuzz.c  ipc_crypto_fuzz.c  ipc_msg_fuzz.c  ipc_state_fuzz.c  listener_acl_fuzz.c  minecraft_fuzz.c  resolver_response_fuzz.c  run_fuzz.sh  table_lookup_fuzz.c  tls_fuzz.c  xmpp_fuzz.c
tests/fuzz/corpus/cfg_tokenizer/: simple.conf
tests/fuzz/corpus/config/: minimal.conf
tests/fuzz/corpus/hostname/: ipv6.txt
tests/fuzz/corpus/http/: valid_get.txt  valid_post.txt
tests/fuzz/corpus/ipc_state/: seed
tests/fuzz/corpus/resolver_response/: seed
tests/include/: ev.h  resolver_fuzz.h
